--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chartist": "^0.11.0",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
+    "react-chartist": "^0.13.1",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.1"
   },
   "scripts": {
