--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "chartist": "^0.11.0",
     "material-ui": "^0.20.0",
+    "radium": "^0.24.0",
     "react": "^16.2.0",
     "react-chartist": "^0.13.1",
     "react-dom": "^16.2.0",
