--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.2.0",
     "react-chartist": "^0.13.1",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
